<resources>
    <string name="app_name">SmartEspresso</string>
    <string name="power_controls">Power controls</string>
    <string name="power_on">Turn on</string>
    <string name="power_off">Turn off</string>
    <string name="brew_controls">Brew controls</string>
    <string name="brew_button">Brew</string>
    <string name="recipe_title">Recipes</string>
    <string name="select_recipe">Select</string>
    <string name="enter_coffee">Coffee</string>
    <string name="edit_coffee">Name of coffee</string>
    <string name="enter_dose">Dose</string>
    <string name="edit_dose">dose in grams</string>
    <string name="enter_yield">Yield</string>
    <string name="edit_yield">yield in grams</string>
    <string name="enter_brewTime">Brew time</string>
    <string name="edit_brewTime">Brew time in seconds</string>
    <string name="enter_grind">Grind</string>
    <string name="edit_grind">Grind setting</string>
    <string name="coffee_head">Coffee</string>
    <string name="dose_head">Dose</string>
    <string name="yield_head">Yield</string>
    <string name="brewTime_head">Brew time</string>
    <string name="grind_head">Grind</string>
    <string name="select_head"> </string>
    <string name="view_recipes">View recipes</string>
    <string name="recipe_controls">Recipe controls</string>
    <string name="power_warning">Remember to check that power is off</string>
    <string name="power_default">off</string>
    <string name="temp_default">-</string>
    <string name="add_recipe_button">Add recipe</string>
    <string name="temp_notification_body">The machine has heated up</string>
    <string name="temp_notification_title">Temperature reached</string>
    <string name="recipe_menu_prompt">Remove recipe?</string>
    <string name="recipe_menu_remove">Yes</string>
    <string name="recipe_menu_cancel">No</string>
</resources>