<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/enterCoffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_coffee" />

            <EditText
                android:id="@+id/editCoffee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/edit_coffee" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/enterDose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_dose" />

            <EditText
                android:id="@+id/editDose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/edit_dose"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/enterYield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_yield" />

            <EditText
                android:id="@+id/editYield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/edit_yield"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/enterBrewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_brewTime" />

            <EditText
                android:id="@+id/editBrewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/edit_brewTime"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/enterGrind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_grind" />

            <EditText
                android:id="@+id/editGrind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_grind"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/submitRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_recipe_button" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>