<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/recipe_menu_prompt"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/recipe_menu_text_size"
            android:background="@color/recipeMenuBackground"/>

        <Button
            android:id="@+id/recipeMenuRemove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/recipe_menu_remove"
            android:textSize="@dimen/recipe_menu_text_size"
            android:background="@color/recipeMenuConfirm"/>

        <Button
            android:id="@+id/recipeMenuCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/recipe_menu_cancel"
            android:textSize="@dimen/recipe_menu_text_size"
            android:background="@color/recipeMenuCancel"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>