<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E48888">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/power_controls"
                    android:textAlignment="center"
                    android:textSize="36sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/power"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:background="#eb9494"
                    android:textAlignment="center"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:background="#eb9494"
                    android:textAlignment="center"
                    android:textSize="36sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/turnOn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:onClick="onTurnOn"
                    android:text="@string/power_on" />

                <Button
                    android:id="@+id/turnOff"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:onClick="onTurnOff"
                    android:text="@string/power_off"
                    app:layout_constraintEnd_toStartOf="@id/turnOn" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A7E8AA">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/brew_controls"
                    android:textAlignment="center"
                    android:textSize="36sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <NumberPicker
                    android:id="@+id/brewTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:textAlignment="center"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:onClick="onBrew"
                    android:text="@string/brew_button" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="dbTest"
            android:text="Button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>